--- a/frontend/chatfrontend/package.json
+++ b/frontend/chatfrontend/package.json
@@ -15,6 +15,8 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.1",
     "tailwind": "^4.0.0",
     "web-vitals": "^2.1.4",
     "zustand": "^5.0.3"
